--- a/WebsiteDemo/Views/Home/Index.cshtml
+++ b/WebsiteDemo/Views/Home/Index.cshtml
@@ -4,5 +4,6 @@
 
 <div class="text-center">
     <h1 class="display-4">This is a sample website home page</h1>
+    <h3 class="display-4">I welcome you all</h3>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
